Fixed namespacing

--- a/assets/scss/gfexcel.scss
+++ b/assets/scss/gfexcel.scss
@@ -147,6 +147,9 @@ ul.fields-select {
         &[readonly] {
             background-color: #e2e7e9;
         }
+        &.large-text {
+            max-width: 90%;
+        }
     }
 
     input[type=checkbox],
